# FlappyDappy

./: .clangd  CMakeLists.txt  compile_commands.json
build-ninja/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  flappy_tests-b12d07c_include.cmake
docs/: architecture.md  next.md
src/: .clangd  combined_all.md  combined_docs.md  main.cpp
src/application/ports/: id_generator.h  leaderboard_repository.h  match_repository.h  player_repository.h  session_broadcaster.h  unit_of_work.h
src/application/use_cases/: finish_match_use_case.h  join_session_use_case.h  mark_ready_use_case.h  matchmaking_service.h  session_service.h  submit_input_use_case.h  tick_session_use_case.h
src/domain/game/: bird_state.h  collision_service.cpp  collision_service.h  obstacle_generator.cpp  obstacle_generator.h  physics_config.h  physics_engine.cpp  physics_engine.h  pipe.h  score_service.h  world_snapshot.h
src/domain/match/: match_result.h  ranking_service.h
src/domain/player/: player.h  player_id.h
src/domain/session/: game_session.cpp  game_session.h  input_command.h  player_session_state.h  session_id.h  session_state.h
src/infrastructure/logging/: console_logger.cpp  console_logger.h  logger.h
src/infrastructure/net/: websocket_session.h
tests/domain/: collision_service_tests.cpp  game_session_tests.cpp
